# geotracking-reactive-functional-microservice/src/main/java/com/example/reactive/functional/geotracking/api/handlers/TracksHandler.java
@@ -8,6 +8,7 @@ import com.example.reactive.functional.geotracking.service.LazyService;
 import com.example.reactive.functional.geotracking.service.dto.SearchTrackByCriteria;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.math.NumberUtils;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
@@ -15,9 +16,7 @@ import org.springframework.web.reactive.function.server.ServerRequest;
 import org.springframework.web.reactive.function.server.ServerResponse;
 import org.springframework.web.server.ServerWebInputException;
 import reactor.core.publisher.Mono;
-import reactor.util.function.Tuple3;
 
-import java.time.Duration;
 import java.util.Optional;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON;
@@ -47,24 +46,19 @@ public class TracksHandler {
 
     public Mono<ServerResponse> getLastPosition(ServerRequest request) {
         final Optional<String> user = request.queryParam("user");
-        final Optional<String> deviceId = request.queryParam("deviceId");
-        final Optional<String> testLazyTimeParam = request.queryParam("testLazyTime");
-        final Integer testLazyTime = testLazyTimeParam.isPresent() ? Integer.valueOf(testLazyTimeParam.get()) : 0;
+        final String testLazyTimeHeader = request.headers().firstHeader("testLazyTime");
+        final Integer testLazyTime = NumberUtils.isParsable(testLazyTimeHeader)  ? Integer.valueOf(testLazyTimeHeader) : 0;
 
+        // Call a lazy service to sleep the indicated
+        Mono<Integer> lazy = lazyService.sleep(testLazyTime).thenReturn(testLazyTime);
 
-        Mono<Integer> lazy = testLazyTime > 0 ? lazyService.sleep(testLazyTime).thenReturn(testLazyTime) : Mono.just(testLazyTime);
-
-        if (deviceId.isPresent() && StringUtils.hasLength(deviceId.get())) {
-            return lazy.flatMap( t -> geoPointService.getLastPositionByDeviceId(deviceId.get()))
-                    .flatMap(geoPoint -> ServerResponse.ok().body(fromValue(geoPoint)))
-                    .switchIfEmpty(ServerResponse.noContent().build());
-
-        } else if (user.isPresent() && StringUtils.hasLength(user.get())) {
+        // Get last position
+       if (user.isPresent() && StringUtils.hasLength(user.get())) {
             return lazy.flatMap( t -> geoPointService.getLastPositionByUser(user.get()))
                     .flatMap(geoPoint -> ServerResponse.ok().body(fromValue(geoPoint)))
                     .switchIfEmpty(ServerResponse.noContent().build());
 
-        } else throw new ServerWebInputException("Some parameter does not have to be empty");
+        } else throw new ServerWebInputException("user: must not be empty");
 
     }
 
@@ -89,8 +83,7 @@ public class TracksHandler {
 
         return ServerResponse.ok()
                 .contentType(MediaType.TEXT_EVENT_STREAM)
-                // delay 2 secons !!!!!!!!!!
-                .body(geoPointService.findGeoPointByParameters(criteria).delayElements(Duration.ofSeconds(2)), GeoPointResponseDTO.class)
+                .body(geoPointService.findGeoPointByParameters(criteria), GeoPointResponseDTO.class)
                 .switchIfEmpty(ServerResponse.noContent().build());
     }
 
