# geotracking-synchronous-microservice/src/main/resources/openapi/geotracking-definitions.yaml
@@ -96,32 +96,27 @@ paths:
         get:
             tags:
                 - Tracking
-            summary: Get the last position of a device or user
-            description: Get the last position of a device, you can filter by user or by deviceId. But it is mandatory to filter by one of the two parameters.
+            summary: Get the last position of a user
+            description: Get the last position of a user.
             operationId: getLastPosition
             parameters:
-                -   name: user
-                    in: query
-                    description: User Id
-                    required: false
-                    schema:
-                        type: string
-                    example: W99999
-                -   name: deviceId
-                    in: query
-                    description: Divice Id
-                    required: false
-                    schema:
-                        type: string
-                    example: 1111222XXXXXXX
                 -   name: testLazyTime
-                    in: query
+                    in: header
                     description: Time in seconds that the service is lazy.
                     required: false
                     schema:
                         type: integer
                         default: 0
                     example: 5
+
+                -   name: user
+                    in: query
+                    description: User Id
+                    required: true
+                    schema:
+                        type: string
+                    example: X00005
+
 
             responses:
                 "200":
